--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -1,4 +1,7 @@
 <div id="contactus" class="business-card">
+    <div class="contact-title">
+        <h3 class="text-center">For more details and queries or any custom design contact us at.</h3>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-offset-2 col-center-content">
