--- a/src/app/image-details/image-details.component.css
+++ b/src/app/image-details/image-details.component.css
@@ -1,3 +1,6 @@
+.details-page {
+    background: #ecfdff;
+}
 .image-details .art-image {
     min-height: 20rem;
     min-width: 100%;
@@ -5,9 +8,9 @@
     background-repeat: no-repeat;
     align-content: center;
     background-size: cover;
-    margin: 1rem 0 3rem 0;
+    margin: 2rem 0 3rem 0;
 }
 
 .button:hover {
-    background-color: rgb(245, 192, 18);
+    background-color: rgb(18, 90, 245);
 }
