--- a/src/app/image-gallary/image-gallary.component.html
+++ b/src/app/image-gallary/image-gallary.component.html
@@ -1,16 +1,19 @@
 <body>
     <div class="container">
         <div class="page-title">
-            <h2 class="text-center text-white mt-2">Image Gallery</h2>
+            <h2 class="text-center">Image Gallery</h2>
         </div>
-        <hr>
+        <div class="">
+            <h4 class="text-center mt-3">3D Acrylic Design Board</h4>
+        </div>
         <div class="row">
-            <div class="col-sm-6 col-md-4 col-lg-3" *ngFor="let item of allImages | filterimages: filterBy">
-                <div class="card gallery-card">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-3" *ngFor="let artImage of threeDArtImages">
+                <div class=" card mb-4 border-0 gallery-card">
+                    <img class="img animated zoomIn" src="{{ artImage.url }}" />
                     <div class="card-body">
-                        <img class="img-fluid animated zoomIn" src="{{ item.url }}" />
-                        <p class="price-tag">Price: {{ item.price | currency:"₹" }}</p>
-                        <button class="btn btn-primary btn-block" [routerLink]="['/details', item.id]">Order Now</button>
+                        <p class="price-tag">Price: {{ artImage.price | currency:"₹" }}</p>
+                        <button class="btn btn-primary btn-block" [routerLink]="['/details', artImage.id]">
+                            Order Now</button>
                     </div>
                 </div>
             </div>
