--- a/src/app/OrderModal/OrderModal.component.html
+++ b/src/app/OrderModal/OrderModal.component.html
@@ -4,26 +4,28 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+<br>
+<p class="text-center text-warning"> Please enter all the fields.</p>
 
 <div class="modal-body">
     <form [formGroup]="orderForm" (ngSubmit)="onSubmit(); modal.dismiss('Cross click')" novalidate>
         <div class="form-group">
-            <label>Name</label>
+            <label>Name *</label>
             <input type="text" class="form-control" placeholder="Enter name" formControlName="name" />
         </div>
 
         <div class="form-group">
-            <label>Email</label>
+            <label>Email *</label>
             <input type="email" class="form-control" placeholder="Enter email" formControlName="email" />
         </div>
 
         <div class="form-group">
-            <label>Phone</label>
+            <label>Phone *</label>
             <input type="text" class="form-control" placeholder="Enter phone" formControlName="phone" />
         </div>
 
         <div class="form-group">
-            <label>Address</label>
+            <label>Address *</label>
             <textarea class="form-control" placeholder="Enter address" rows="3" formControlName="address"></textarea>
         </div>
 
