--- a/src/app/image-details/image-details.component.html
+++ b/src/app/image-details/image-details.component.html
@@ -8,22 +8,19 @@
                 <h3 class="desc-text pt-4">{{ image.name }}</h3>
                 <h4 class="price-text pt-4 text-primary">Price. {{ image.price | currency:"₹" }}</h4>
                 <p>
-                    Nakshatram Arts brings this beautiful {{ image.name }} for home and office use. Order Now at lower
-                    price. <br> beautiful 3D Acrylic Design with color emitting LEDs make this piece of art more
-                    beautiful.
+                    Nakshatram Arts brings this beautiful {{ image.name }} for home and office use. Order Now at lower price. <br> beautiful 3D Acrylic Design with color emitting LEDs make this piece of art more beautiful.
                 </p>
-                <button type="button" class="btn btn-success button" (click)="openModal()" data-toggle="modal"
-                    data-target="#myModal">Confirm Order</button>
+                <button type="button" class="btn btn-primary button mt-2" (click)="openModal()" data-toggle="modal" data-target="#myModal">Confirm Order</button>
             </div>
         </div>
     </div>
     <hr>
     <div class="container">
-        <h3 class="font-weight-light text-primary wow slideInLeft" data-wow-duration="2s">Product Specifications:</h3>
+        <h3 class="text-primary wow slideInLeft mt-3 mb-3" data-wow-duration="2s">Product Details:</h3>
         <table class="table table-bordered">
             <thead class="thead-light">
                 <tr>
-                    <th>Product Specifications</th>
+                    <th>Specifications</th>
                     <th>Measurement / Details </th>
                 </tr>
             </thead>
