--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,13 +26,13 @@
                     <h3> Connect with Us.. </h3>
                     <ul>
                         <li>
-                            <h5><a href="#"> Facebook </a></h5>
+                            <h5><a target="_blank" href="https://www.facebook.com/"> Facebook </a></h5>
                         </li>
                         <li>
-                            <h5><a href="#"> Instagram </a></h5>
+                            <h5><a target="_blank" href="https://www.instagram.com/"> Instagram </a></h5>
                         </li>
                         <li>
-                            <h5><a href="#"> Twitter </a></h5>
+                            <h5><a target="_blank" href="https://www.twitter.com/"> Twitter </a></h5>
                         </li>
                     </ul>
                 </div>
