--- a/src/app/OrderModal/OrderModal.component.html
+++ b/src/app/OrderModal/OrderModal.component.html
@@ -34,3 +34,6 @@
     </button>
     </form>
 </div>
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">
+    <p style="color: blue">Please Wait. </p>
+</ngx-spinner>
