--- a/src/app/image-gallary/image-gallary.component.html
+++ b/src/app/image-gallary/image-gallary.component.html
@@ -12,7 +12,7 @@
                     <img class="img animated zoomIn" src="{{ artImage.url }}" />
                     <div class="card-body">
                         <p class="price-tag">Price: {{ artImage.price | currency:"₹" }}</p>
-                        <button class="btn btn-primary btn-block" [routerLink]="['/details', artImage.id]">
+                        <button class="btn btn-primary btn-block" [routerLink]="['/product-details', artImage.id]">
                             Order Now</button>
                     </div>
                 </div>
