--- a/src/app/image-gallary/image-gallary.component.html
+++ b/src/app/image-gallary/image-gallary.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="container">
         <div class="page-title">
-            <h2 class="text-center">Image Gallery</h2>
+            <h2 class="text-center">Gallery</h2>
         </div>
         <div class="">
             <h4 class="text-center mt-3">3D Acrylic Design Board</h4>
